added resource text

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,3 +1,4 @@
 <h1>City</h1>
 <p>Placeholder city.</p>
+<p id="resourceText">gold: 0, wood: 0, stone: 0, amber: 0</p>
 <a href="/logout">Logout</a>
