--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -2,6 +2,8 @@
 
 <h1>City</h1>
 <p>Placeholder city.</p>
+<p id="buildingText">You have no buildings.</p>
+<button id="buyCoinGeneratorButton">+ Coin Generator (40 gold)</button>
 <p id="resourceText">gold: 0, wood: 0, stone: 0, amber: 0</p>
 <a href="/logout">Logout</a>
 
