client-side building support

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -2,8 +2,14 @@
 
 <h1>City</h1>
 <p>Placeholder city.</p>
-<p id="buildingText">You have no buildings.</p>
-<button id="buyCoinGeneratorButton">+ Coin Generator (40 gold)</button>
+<div class="buildingsOwned">
+    <p id="noBuildingsText">You have no buildings.</p>
+</div>
+
+
+<div class="buyButtons">
+</div>
+
 <p id="resourceText">gold: 0, wood: 0, stone: 0, amber: 0</p>
 <a href="/logout">Logout</a>
 
