--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -11,6 +11,15 @@
 </div>
 
 <p id="resourceText">gold: 0, wood: 0, stone: 0, amber: 0</p>
+<div class="storageCapacity">
+    <p>Storage Capacities:</p>
+    <ul>
+        <li id="goldStorage">Gold Storage: 0</li>
+        <li id="woodStorage">Wood Storage: 0</li>
+        <li id="stoneStorage">Stone Storage: 0</li>
+        <li id="amberStorage">Amber Storage: 0</li>
+    </ul>
+</div>
 <a href="/logout">Logout</a>
 
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
