Capacities now fully functional!

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -14,10 +14,10 @@
 <div class="storageCapacity">
     <p>Storage Capacities:</p>
     <ul>
-        <li id="goldStorage">Gold Storage: 0</li>
-        <li id="woodStorage">Wood Storage: 0</li>
-        <li id="stoneStorage">Stone Storage: 0</li>
-        <li id="amberStorage">Amber Storage: 0</li>
+        <li id="goldStorage">Gold Storage: {{goldStorageCapacity}}</li>
+        <li id="woodStorage">Wood Storage: {{woodStorageCapacity}}</li>
+        <li id="stoneStorage">Stone Storage: {{stoneStorageCapacity}}</li>
+        <li id="amberStorage">Amber Storage: {{amberStorageCapacity}}</li>
     </ul>
 </div>
 <a href="/logout">Logout</a>
