--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,13 @@ header {
     padding: 10px 0;
     text-align: center;
 }
+footer {
+  text-align: center;
+  margin-top: 50px;
+  padding: 20px 0;
+  background: #333;
+  color: #fff;
+}
 form {
     max-width: 300px;
     margin: 20px auto;
