--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,12 +8,12 @@ don't forget to include your css and your client-side script file references in 
 
 <head>
     <meta charset="utf-8">
-    <title>My Site</title>
+    <title>MongoCB</title>
     <link rel="stylesheet" href="../../public/css/styles.css">
 </head>
 
 <body>
-    <header>I'm a header</header>
+    <header><h1>MongoCB</h1></header>
 
     <p>I will be on every page of the site</p>
     <main>
