--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,10 +1,24 @@
 <body>
 
 <h1>City</h1>
-<p>Placeholder city.</p>
-<div class="buildingsOwned">
+{{#if (isEmptyObject buildings)}}
+  <div class="buildingsOwned">
     <p id="noBuildingsText">You have no buildings.</p>
-</div>
+  </div>
+{{else}}
+  <div class="buildingsOwned">
+    {{#each orderedBuildingsList}}
+      {{#if (propertyExists ../buildings @key)}}
+        <div class="buildingRow">
+          <img src="{{this.icon}}" alt="{{@key}}" />
+          <span>{{@key}}</span>
+          <span>{{this.buildingDescription}}</span>
+          <span>Count: {{lookup ../buildings @key}}</span>
+        </div>
+      {{/if}}
+    {{/each}}
+  </div>
+{{/if}}
 
 
 <div class="buyButtons">
