Added the help page and the corresponding link from city. Also updated building requirements to match PVP design.

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,4 +1,5 @@
 <body>
+    <a class = "help" href="/help">Click here to read up on how to play the game</a>
 
 <h1>City</h1>
 <p>Welcome, <span id="username">{{username}}</span></p>
