Fixed tasks rewards not giving XP and changed the formatting of the generator buttons

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -18,14 +18,16 @@
     {{/each}}
 </div>
 
-<button id="buy-gold-generator">Buy Gold Generator</button>
-<button id="destroy-gold-generator">Destroy Gold Generator</button>
-<button id="buy-wood-generator">Buy Wood Generator</button>
-<button id="destroy-wood-generator">Destroy Wood Generator</button>
-<button id="buy-stone-generator">Buy Stone Generator</button>
-<button id="destroy-stone-generator">Destroy Stone Generator</button>
-<button id="buy-amber-generator">Buy Amber Generator</button>
-<button id="destroy-amber-generator">Destroy Amber Generator</button>
+<div class = generator>
+    <button id="buy-gold-generator">Buy Gold Generator</button>
+    <button id="destroy-gold-generator">Destroy Gold Generator</button>
+    <button id="buy-wood-generator">Buy Wood Generator</button>
+    <button id="destroy-wood-generator">Destroy Wood Generator</button>
+    <button id="buy-stone-generator">Buy Stone Generator</button>
+    <button id="destroy-stone-generator">Destroy Stone Generator</button>
+    <button id="buy-amber-generator">Buy Amber Generator</button>
+    <button id="destroy-amber-generator">Destroy Amber Generator</button>
+</div>
 
 
 <p id="resourceText">gold: 0, wood: 0, stone: 0, amber: 0</p>
