City Page will now display "Not enough resources" when player cannot afford a building

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,6 +1,8 @@
 <body>
     <a class = "help" href="/help">Click here to read up on how to play the game</a>
-
+<div class = "no_buy">
+        <h2  id = "no_buy" hidden = true>Not enough resources</h2>
+    </div>
 <h1>City</h1>
 <p>Welcome, <span id="username">{{username}}</span></p>
 <p>Level: <span id="level">{{level}}</span>, XP: <span id="xp">{{xp}}</span></p>
