Added link to daily task page

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,5 +1,9 @@
 <body>
-    <a class = "help" href="/help">Click here to read up on how to play the game</a>
+    <div class = "city_buttons">
+        <a href="/help">Click here to read up on how to play the game</a>
+        <br>
+        <a href="/tasks">Click here to view your daily tasks</a>
+    </div>
 <div class = "no_buy">
         <h2  id = "no_buy" hidden = true>Not enough resources</h2>
     </div>
