added all building functionality

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,6 +61,7 @@ form label {
     border: black 1px solid;
     padding: 10px;
     border-radius: 5px;
+    align-content: left;
 }
 
 .no-buildings {
