--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -35,6 +35,7 @@
   </div>
 {{/if}}
 
+<div id="buildings">
 <button id="buy-gold-generator">Buy Gold Generator</button>
 <button id="destroy-gold-generator">Destroy Gold Generator</button>
 <button id="buy-wood-generator">Buy Wood Generator</button>
@@ -43,7 +44,25 @@
 <button id="destroy-stone-generator">Destroy Stone Generator</button>
 <button id="buy-amber-generator">Buy Amber Generator</button>
 <button id="destroy-amber-generator">Destroy Amber Generator</button>
-
+<button id="buy-gold-storage">Buy Gold Storage</button>
+<button id="destroy-gold-storage">Destroy Gold Storage</button>
+<button id="buy-wood-storage">Buy Wood Storage</button>
+<button id="destroy-wood-storage">Destroy Wood Storage</button>
+<button id="buy-stone-storage">Buy Stone Storage</button>
+<button id="destroy-stone-storage">Destroy Stone Storage</button>
+<button id="buy-amber-storage">Buy Amber Storage</button>
+<button id="destroy-amber-storage">Destroy Amber Storage</button>
+<button id="buy-archer-tower">Buy Archer Tower</button>
+<button id="destroy-archer-tower">Destroy Archer Tower</button>
+<button id="buy-spell-tower">Buy Spell Tower</button>
+<button id="destroy-spell-tower">Destroy Spell Tower</button>
+<button id="buy-barracks">Buy Barracks</button>
+<button id="destroy-barracks">Destroy Barracks</button>
+<button id="buy-magic-academy">Buy Magic Academy</button>
+<button id="destroy-magic-academy">Destroy Magic Academy</button>
+<button id="buy-army-camp">Buy Army Camp</button>
+<button id="destroy-army-camp">Destroy Army Camo</button>
+</div>
 
 <p id="resourceText">gold: 0, wood: 0, stone: 0, amber: 0</p>
 <div class="storageCapacity">
