Not Finished PVP
The pvp works, but the validation is broken and you can over buy. Also it is not taking actual resources from the user, and random fight does not work

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -37,7 +37,7 @@
         <li id="amberStorage">Amber Storage: {{amberStorageCapacity}}</li>
     </ul>
 </div>
-
+<a href="/pvp" class="pvp-button">Go to PvP</a>
 <a href="/logout">Logout</a>
 
 <script>
