--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,16 +10,17 @@ don't forget to include your css and your client-side script file references in 
     <meta charset="utf-8">
     <title>MongoCB</title>
     <link rel="stylesheet" href="../../public/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header><h1>MongoCB</h1></header>
-
-    <p>I will be on every page of the site</p>
     <main>
         {{{body}}}
     </main>
-    <footer>I'm a footer</footer>
+    <footer></footer>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
