--- a/views/pvp.handlebars
+++ b/views/pvp.handlebars
@@ -2,8 +2,10 @@
 
 <div class="pvp">
     <div class="pvpButtons">
-        <button id="random-attack">Attack Random Player</button>
-        
+        <form action="/pvp/random-attack" method="POST">
+            <button type="submit" id="random-attack">Attack Random Player</button>
+        </form>
+
         <form id="target-attack" action="/pvp/targeted-battle" method="POST">
             <input type="text" name="targetPlayer" placeholder="Enter player name">
             <button type="submit">Attack Specific Player</button>
