--- a/views/battleprep.handlebars
+++ b/views/battleprep.handlebars
@@ -2,6 +2,34 @@
 <html>
 <head>
     <title>Battle Preparation</title>
+    <script>
+        function validateResources() {
+    var userResources = {
+        gold: {{userResources.gold}},
+        wood: {{userResources.wood}},
+        stone: {{userResources.stone}},
+        amber: {{userResources.amber}}
+    };
+
+    var totalCost = { gold: 0, wood: 0, stone: 0, amber: 0 };
+    //like server side validation
+    {{#each units}}
+    var unitAmount = parseInt(document.getElementById("{{this.unitName}}-amount").value);
+    totalCost.gold += unitAmount * {{this.unitCost.gold}};
+    totalCost.wood += unitAmount * {{this.unitCost.wood}};
+    totalCost.stone += unitAmount * {{this.unitCost.stone}};
+    totalCost.amber += unitAmount * {{this.unitCost.amber}};
+    {{/each}}
+
+    if (totalCost.gold > userResources.gold || totalCost.wood > userResources.wood || 
+        totalCost.stone > userResources.stone || totalCost.amber > userResources.amber) {
+        alert("Not enough resources to purchase the selected army.");
+        return false;
+    }
+
+    return true;
+}
+    </script>
 </head>
 <body>
     <h1>Battle Preparation</h1>
@@ -9,7 +37,7 @@
     <p>Opponent Towers: Archer Towers: {{getProperty opponent.buildings 'Archer Tower'}}, Spell Towers: {{getProperty opponent.buildings 'Spell Tower'}}</p> 
     <p>Your Resources: Gold: {{userResources.gold}}, Wood: {{userResources.wood}}, Stone: {{userResources.stone}}, Amber: {{userResources.amber}}</p>
 
-    <form id="battle-form", form action="/pvp/execute-battle" method="POST">
+    <form id="battle-form", form action="/pvp/execute-battle" method="POST" onsubmit="return validateResources()">
         {{#each units}}
         <div class="unit">
             <img src="{{this.icon}}" alt="{{this.unitName}}">
