--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -1,14 +1,37 @@
+<!DOCTYPE html>
+<html>
+
 <head>
     <title>Report Player</title>
+
+    
 </head>
 
 <body>
-    <h1>Report Player</h1>
 
-    <p>
-        Hi {{name}},
-        Sorry to hear you're having issues. Please select a player and a reason for the report below.
-    </p>
+    <main>
+        <h1>Report Player</h1>
+        <p>
+        Hi {{name}},<br>Sorry to hear you're having issues. Please select a player and a reason for the report below.
+        </p>
+
+        <form id="searchPlayers">
+        <label for="show_search_term">Find Player</label>
+        <input type="text" id="show_search_term"/>
+        <label for="reportType">Reason</label>
+        <select name="reportType" id="reportType" onchange="showfield(this.options[this.selectedIndex].value)">
+            <option value="reasonBadName">Inappropriate Username</option>
+            <option value="reasonHarassment">Harassment</option>
+            <option value="reasonOther">Other, please specify</option>
+        </select>
+        <input type="hidden" id="otherReportReason"/>
+        <div id="formError"></div>
+        <button id='submitButton' type="submit">Submit</button>
+    </form>
+
+    <p hidden id="successMessage">Report Filed Successfully.</p>
+
+    </main>
 
     <script type="text/javascript">
         function showfield(reportReason){
@@ -20,18 +43,10 @@
         }
     </script>
 
-    <form id="searchPlayers" method="GET">
-        <label for="show_search_term">Find Player</label>
-        <input type="text" id="show_search_term"/>
-        <label for="reportReason">Reason</label>
-        <select name="reportReason" onchange="showfield(this.options[this.selectedIndex].value)">
-            <option value="reasonBadName">Inappropriate Username</option>
-            <option value="reasonHarrassment">Harassment</option>
-            <option value="reasonOther">Other, please specify</option>
-        </select>
-        <input type="hidden" id="otherReportReason"/>
-        <div id="formError"></div>
-        <button type="submit">Submit</button>
-    </form>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="../public/js/report.js"></script>
 
 </body>
+
+</html>
