added report button

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -74,6 +74,7 @@
     </ul>
 </div>
 <a href="/pvp" class="pvp-button">Go to PvP</a>
+<a href="/report" class="report-button">Report a Player</a>
 <a href="/logout">Logout</a>
 
 <script>
