Fixed all the html

--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,3 +1,12 @@
-<h1>Error</h1>
-<p>An error occurred. Please try again later.</p>
-<a href="/">Go to Home Page</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Error Page</title>
+</head>
+<body>
+    <h1>Error</h1>
+    <p>An error occurred. Please try again later.</p>
+    <a href="/">Go to Home Page</a>
+</body>
+</html>
