--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Mongo City Builder Help</title>
+</head>
 <body>
     <h1>Help</h1>
     <p>Welcome to Mongo City Builder, an interactive simulator where you can build the perfect city!
-        Here, you can find explanations the game's various mechanics.</p>
+        Here, you can find explanations of the game's various mechanics.</p>
     
     <article>
         <h2>Daily Tasks</h2>
@@ -49,3 +55,4 @@
     </article>
     <a href="/city">Return to City</a>
 </body>
+</html>
