--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,3 +101,18 @@ form label {
     height: auto;
     margin-right: 10px;
 }
+.content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.game-info {
+    width: 45%; /* Adjust the width as needed */
+}
+
+.login-container {
+    width: 45%; /* Adjust the width as needed */
+    text-align: left;
+}
