--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -1,8 +1,12 @@
-{{!--
-
-logout handlebar template
-
---}}
-<h1>Logout</h1>
-<p>You have been successfully logged out.</p>
-<a href="/login">Go to Home Page</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Logout Page</title>
+</head>
+<body>
+    <h1>Logout</h1>
+    <p>You have been successfully logged out.</p>
+    <a href="/login">Go to Home Page</a>
+</body>
+</html>
