--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,18 +1,27 @@
-<h1>Register</h1>
-{{#if error}}
-    <p class="error">{{error}}</p>
-{{/if}}
-<form id="registration-form" action="/register" method="post">
-    <label for="usernameInput">Username</label>
-    <input type="text" name="usernameInput" id="usernameInput" required>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Register</title>
+</head>
+<body>
+    <h1>Register</h1>
+    {{#if error}}
+        <p class="error">{{error}}</p>
+    {{/if}}
+    <form id="registration-form" action="/register" method="post">
+        <label for="usernameInput">Username</label>
+        <input type="text" name="usernameInput" id="usernameInput" required>
 
-    <label for="passwordInput">Password</label>
-    <input type="password" name="passwordInput" id="passwordInput" required>
+        <label for="passwordInput">Password</label>
+        <input type="password" name="passwordInput" id="passwordInput" required>
 
-    <label for="confirmPasswordInput">Confirm Password</label>
-    <input type="password" name="confirmPasswordInput" id="confirmPasswordInput" required>
+        <label for="confirmPasswordInput">Confirm Password</label>
+        <input type="password" name="confirmPasswordInput" id="confirmPasswordInput" required>
 
-    <button type="submit">Register</button>
-</form>
+        <button type="submit">Register</button>
+    </form>
 
-<a href="/login">Already have an account? Click here to log-in</a>
+    <a href="/login">Already have an account? Click here to log-in</a>
+</body>
+</html>
