--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -202,6 +202,7 @@
 </div>
 <a href="/pvp" class="pvp-button">Go to PvP</a>
 <a href="/report" class="report-button">Report a Player</a>
+<a href="/leaderboard">Leaderboard</a>
 <a href="/logout">Logout</a>
 
 <script>
