added options menu

--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,7 +1,6 @@
 <body>
     <div class = "city_buttons">
-        <a href="/help">Click here to read up on how to play the game</a>
-        <br>
+        <a href="/options">Click here to go to the options menu</a>
         <a href="/tasks">Click here to view your daily tasks</a>
     </div>
 <div class = "no_buy">
@@ -202,8 +201,7 @@
     </div>
 </div>
 <a href="/pvp" class="pvp-button">Go to PvP</a>
-<a href="/report" class="report-button">Report a Player</a>
-<a href="/logout">Logout</a>
+
 
 <script>
     var initialResources = {
