--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,12 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>City View</title>
+</head>
 <body>
-    <div class = "city_buttons">
-        <a href="/options">Click here to go to the options menu</a>
-        <br>
-        <a href="/tasks">Click here to view your daily tasks</a>
-    </div>
-<div class = "no_buy">
-        <h2  id = "no_buy" hidden = true>Not enough resources</h2>
-    </div>
+<div class="city_buttons">
+    <a href="/options">Click here to go to the options menu</a>
+    <br>
+    <a href="/tasks">Click here to view your daily tasks</a>
+</div>
+
+<div class="no_buy">
+    <h2 id="no_buy" hidden>Not enough resources</h2>
+</div>
+
 <h1>City</h1>
 <p>Welcome, <span id="username">{{username}}</span></p>
 <p>Level: <span id="level">{{level}}</span>, XP: <span id="xp">{{xp}}</span></p>
@@ -218,3 +226,4 @@
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="../public/js/main.js"></script>
 </body>
+</html>
