Added links between pages and fixed an error with building purchases that allowed users to go into the negatives

--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -53,6 +53,6 @@
             </ol>
         </p>
     </article>
-    <a href="/city">Return to City</a>
+    <a href="/options">Go back to options</a>
 </body>
 </html>
