--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -31,6 +31,7 @@
 
     <p hidden id="successMessage">Report Filed Successfully.</p>
 
+    <a href="/options">Go back to options</a>
     </main>
 
     <script type="text/javascript">
