--- a/views/options.handlebars
+++ b/views/options.handlebars
@@ -1,8 +1,12 @@
 <body>
     <h1>Options</h1>
-    <a href="/help">Click here to read up on how to play the game</a>
-    <br>
-    <a href="/report" class="report-button">Report a Player</a>
-    <br>
-    <a href="/logout">Logout</a>
+    <div class = "options">
+        <a href="/help">Click here to read up on how to play the game</a>
+        <br>
+        <a href="/report" class="report-button">Report a Player</a>
+        <br>
+        <a href="/logout">Logout</a>
+        <br><br>
+    </div>
+    <a href="/city">Return to City</a>
 </body>
