--- a/views/options.handlebars
+++ b/views/options.handlebars
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Error Page</title>
+</head>
 <body>
     <h1>Options</h1>
     <div class = "options">
@@ -10,3 +16,4 @@
     </div>
     <a href="/city">Return to City</a>
 </body>
+</html>
