--- a/views/leaderboard.handlebars
+++ b/views/leaderboard.handlebars
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>Leaderboard</title>
 </head>
 
@@ -13,4 +16,5 @@
 
     <a href="/">Go back</a>
 </body>
+</html>
     
