--- a/views/options.handlebars
+++ b/views/options.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Error Page</title>
+    <title>Options Page</title>
 </head>
 <body>
     <h1>Options</h1>
