--- a/views/battleresults.handlebars
+++ b/views/battleresults.handlebars
@@ -4,8 +4,8 @@
     <title>Battle Results</title>
 </head>
 <body>
-    <h1>Battle Results</h1>
-    <p>{{result.message}}</p>
+    <h2>Battle Results</h2>
+    <h1>{{result.message}}</h1>
     <a href="/city">Return to City</a>
 </body>
 </html>
