--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
     <div class="content-wrapper">
         <div class="game-info">
             <h1>Welcome to Mongo City Builder!</h1>
-            <p>Mongo City Builder is an interactive city-building simulator where you can construct your dream city and engage in exciting PVP battles. Here's what you need to know:</p>
+            <p>Mongo City Builder is an interactive city-building simulator where you can construct your dream city and engage in exciting PVP battles! Here's what you need to know:</p>
             <ul>
                 <li><strong>Daily Tasks</strong>: Complete tasks for resources and XP.</li>
                 <li><strong>Building Your City</strong>: Purchase various types of buildings using your resources.</li>
