--- a/views/pvp.handlebars
+++ b/views/pvp.handlebars
@@ -3,6 +3,24 @@
 <head>
     <meta charset="utf-8">
     <title>PvP Page</title>
+    <style>
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .button:hover {
+            background-color: #373535;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <h1>PvP</h1>
@@ -19,6 +37,6 @@
             </form>
         </div>
     </div>
-    <a href="/city">Return to City</a>
+    <a href="/city" class = "button">Return to City</a>
 </body>
 </html>
