--- a/views/battleresults.handlebars
+++ b/views/battleresults.handlebars
@@ -2,10 +2,28 @@
 <html>
 <head>
     <title>Battle Results</title>
+    <style>
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .button:hover {
+            background-color: #373535;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <h2>Battle Results</h2>
     <h1>{{result.message}}</h1>
-    <a href="/city">Return to City</a>
+    <a href="/city" class="button">Return to City</a>
 </body>
 </html>
