--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -3,6 +3,24 @@
 <head>
     <meta charset="utf-8">
     <title>Mongo City Builder Help</title>
+    <style>
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .button:hover {
+            background-color: #373535;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <h1>Help</h1>
@@ -53,6 +71,6 @@
             </ol>
         </p>
     </article>
-    <a href="/options">Go back to options</a>
+    <a href="/options" class="button">Go back to options</a>
 </body>
 </html>
