--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -3,10 +3,29 @@
 <head>
     <meta charset="utf-8">
     <title>Logout Page</title>
+    <style>
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .button:hover {
+            background-color: #373535;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <h1>Logout</h1>
+    
     <p>You have been successfully logged out.</p>
-    <a href="/login">Go to Home Page</a>
+    <a href="/login" class="button">Go to Home Page</a>
 </body>
 </html>
