--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -4,7 +4,24 @@
 <head>
     <title>Report Player</title>
 
-    
+    <style>
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .button:hover {
+            background-color: #373535;
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,7 +48,7 @@
 
     <p hidden id="successMessage">Report Filed Successfully.</p>
 
-    <a href="/options">Go back to options</a>
+    <a href="/options" class="button">Go back to options</a>
     </main>
 
     <script type="text/javascript">
